3tier/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  selector:
    matchLabels:
      app: django
  replicas: 1
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: kingzim/django
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: django-static
          mountPath: /code/www_dir/static/admin
      volumes:
      - name: django-static
        persistentVolumeClaim:
          claimName: django-static-pvc
